@@ -2311,13 +2311,12 @@ ACE_Dev_Poll_Reactor::mask_ops_i (ACE_HANDLE handle,
 {
   ACE_TRACE ("ACE_Dev_Poll_Reactor::mask_ops_i");
 
-  if (!this->handler_rep_.handle_in_range (handle))
+  Event_Tuple *info = this->handler_rep_.find (handle);
+  if (info == 0)
     return -1;
 
   // Block out all signals until method returns.
   ACE_Sig_Guard sb;
-
-  Event_Tuple *info = this->handler_rep_.find (handle);
 
   ACE_Reactor_Mask const old_mask = info->mask;
   ACE_Reactor_Mask new_mask = old_mask;
